git HEAD

    * New dependency: Geo::Distance
    * Update DS100 code list. Station names are now unabbreviated, e.g.
      "Dortmund Univeristät" instead of "Do Universität". Also, stations
      without train service are no longer included
    * Travel::Status::DE::IRIS::Stations now also returns international
      station number, longitude and latitutde for most stations
    * New method Travel::Status::DE::IRIS::Stations::get_station_by_location
      allows station lookup by geolocation

Travel::Status::DE::IRIS 1.07 - Sun May 01 2016

    * Fix inefficient requests for stations with with heavily cross-referenced
      related-station tags (most notable example: München Hbf)

Travel::Status::DE::IRIS 1.06 - Mon Feb 29 2016

    * Partially fix slow response time and excessive network requests for
      stations with heavily cross-referenced related-station tags (most notable
      example: München Hbf). The implementation is still slightly inefficient
      in these cases, but far better than before -- A complete fix will follow
      in the next release. Note that db-iris calls using
      -x/--exact/--no-related are not affected by this issue.

Travel::Status::DE::IRIS 1.05 - Sun Dec 20 2015

    * Update station list. It now uses data supplied by the Deutsche Bahn
      Open Data portal.
    * db-iris: New option -x / --exact / --no-related
    * IRIS->new: New options main_cache, realtime_cache and with_related
    * IRIS: Add ->station and ->related_stations accessors
    * db-iris: Include related stations in query output (for instance,
      "Köln Messe Deutz" will include "Köln Messe Deutz (tief)" and
      "Köln Messe Deutz Gl. 9-10"). Use --exact / --no-related to disable this.
    * IRIS: Same. Also, IRIS->new can now be passed Cache objects to cache
      HTTP requests for a user-defined time. This is most useful when
      building infoscreens and similar, since the scheduled and station data